WTPlanner/force-app/main/default/objects/Lunar_Explorer__c/Lunar_Explorer__c.object-meta.xml
<CustomObject>
    <label>Lunar Explorer</label>
    <pluralLabel>Lunar Explorers</pluralLabel>
    <nameField>
        <label>Explorer ID</label>
        <type>AutoNumber</type>
        <displayFormat>LE-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>