WTPlanner/force-app/main/default/objects/Lunar_Explorer__c/fields/Certification_Level__c.field-meta.xml
<CustomField>
    <fullName>Certification_Level__c</fullName>
    <label>Certification Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novice Crater Walker</fullName>
            </value>
            <value>
                <fullName>Advanced Lava Tube Explorer</fullName>
            </value>
            <value>
                <fullName>Master Lunar Alpinist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>