WTPlanner/force-app/main/default/objects/Lunar_Explorer__c/fields/Medical_Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Clearance_Date__c</fullName>
    <label>Medical Clearance Date</label>
    <type>Date</type>
</CustomField>